# risk-demand-lab

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README_WEEK1.md  docker-compose.yml  pyproject.toml
mlruns/0/: meta.yaml
mlruns/132801094086530490/: meta.yaml
mlruns/599641270864576149/: meta.yaml
mlruns/599641270864576149/f651b8c2fd424180b5095f404dc26a5a/: meta.yaml
mlruns/599641270864576149/f651b8c2fd424180b5095f404dc26a5a/metrics/: acc  auc  f1
mlruns/599641270864576149/f651b8c2fd424180b5095f404dc26a5a/outputs/m-fbe7d162d878458c874fee31f8f3a2ee/: meta.yaml
mlruns/599641270864576149/f651b8c2fd424180b5095f404dc26a5a/tags/: mlflow.runName
mlruns/599641270864576149/models/m-fbe7d162d878458c874fee31f8f3a2ee/: meta.yaml
mlruns/599641270864576149/models/m-fbe7d162d878458c874fee31f8f3a2ee/artifacts/: MLmodel  conda.yaml  model.pkl  requirements.txt
mlruns/599641270864576149/models/m-fbe7d162d878458c874fee31f8f3a2ee/metrics/: acc  auc  f1
mlruns/599641270864576149/models/m-fbe7d162d878458c874fee31f8f3a2ee/tags/: mlflow.source.name
models/credit/latest/: model.pkl
schemas/: precificacao.yaml
src/app/: main.py
src/risk_demand_lab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/train/: train_credit.py
src/validation/: ge_validate.py
tests/: test_smoke.py
